...

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:text="Matches"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/matches"
                    android:layout_width="wrap_content"
...
